# orbit

./: LICENSE  main.py  pyproject.toml
src/app/api/: document_api.py
src/app/api/routes/: document.py
src/app/core/: config.py
src/app/core/models/: document.py  document_models.py
src/app/core/pdf_processor/: __init__.py  extractor.py
src/app/service/: db_service.py  document_service.py  s3_service.py  sqs_service.py  textract_service.py
src/app/utils/: aws_utils.py
