[tool.poetry]
name = "orbit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.35.0"
fastapi = "^0.116.2"
pymupdf4llm = "^0.0.27"
unstructured = "^0.18.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
