[tool.poetry]
name = "orbit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.35.0"
fastapi = "^0.116.2"
pydantic-settings = "^2.11.0"
unstructured = "^0.18.15"
boto3 = "^1.40.39"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
pdfminer-six = "^20250506"
pi-heif = "^1.1.0"
unstructured-inference = "^1.0.5"
pdf2image = "^1.17.0"
pytesseract = "^0.3.13"
unstructured-pytesseract = "^0.3.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
